@@ -13,10 +13,13 @@ import org.springframework.stereotype.Service;
 import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
 public class AuthUserDetailsService implements UserDetailsService {
 
-  UserAccountRepository userAccountRepository;
+  private final UserAccountRepository userAccountRepository;
+
+  public AuthUserDetailsService(UserAccountRepository userAccountRepository) {
+    this.userAccountRepository = userAccountRepository;
+  }
 
   @Override
   public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
@@ -28,12 +31,12 @@ public class AuthUserDetailsService implements UserDetailsService {
         userAccountRepository.findAllRolesByUserId(userAccountEntity.getId()));
 
     return User.builder()
-        .username(userAccountEntity.getUsername())
+        .username(userAccountEntity.getEmail())
         .password(userAccountEntity.getPasswordHash())
         .authorities(
             userAccountEntity.getRoles().stream()
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList()))
+                .toList())
         .build();
   }
 }
